--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
-{
-  "name": "books-api",
+{  "name": "books-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "seed": 
-  },
+    "start": "node server.js"
+    }
+}
+{
   "keywords": [],
   "author": "",
   "license": "ISC",
